did things